--- a/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/visualizacionOpac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/visualizacionOPAC/visualizacionOpac.tmpl
@@ -34,7 +34,7 @@ $(document).ready(function() {
 <section class="center-section-form">
 	<form class="form-horizontal" onsubmit="return false;">
 	    <fieldset>
-	        <legend>[% "Seleccione el esquema a configurar:" | i18n %]</legend>
+	        <legend>[% "Seleccione el esquema a configurar" | i18n %]</legend>
 	        
 	        <div class="control-group">
 	           <label class="control-label" for="">[% "Tipo de documento" | i18n %]</label>
